# meeting-copilot

./: .env.example  .gitignore  DECISION.md  LICENSE  NOTICE  README.md  pytest.ini  sbom.cdx.json  下一轮交付计划-2026-07-07.md  交付与验收报告-2026-07-07.md  优化目标计划-2026-07-07.md  启动服务.sh  验证测试.py
code/desktop_tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
code/desktop_tauri/src-tauri/capabilities/: default.json
code/desktop_tauri/src-tauri/src/: app_command_manifest.rs  asr_worker_command_runner.rs  asr_worker_mic_source_runtime.rs  desktop_asr_worker_lifecycle_runtime.rs  desktop_audio_chunk_runtime.rs  desktop_backend_supervisor.rs  desktop_frontend_probe_runtime.rs  lib.rs  mic_adapter_runtime.rs  native_mic_capture_runtime.rs  native_system_audio_capture_runtime.rs  private_storage.rs  provider_config_runtime.rs
code/web_mvp/backend/: pyproject.toml  pytest.ini
code/web_mvp/backend/meeting_copilot_web_mvp/: __init__.py  app.py  application_schema.py  asr_correct.py  asr_live_events.py  asr_live_report.py  asr_live_repository.py  asr_semantic_quality.py  asr_stream.py  audio_assets.py  auto_suggestion_orchestrator.py  batch_transcribe.py  canonical_transcript.py  data_governance.py  degradation_controller.py  demo_evaluation.py  demo_fixtures.py  desktop_parent_watchdog.py  diagnostic_bundle.py  diarization.py  diarization_runtime.py  docx_export.py  funasr_resident.py  live_events.py  llm_lane_locks.py  llm_service.py  local_api_auth.py  logging_config.py  meeting_preparation.py  meeting_state_extractor.py  metrics.py  mic_capture.py  native_pcm_protocol.py  next006_failpoints.py  openai_protocol.py  pipeline_trace.py  provider_config_runtime.py  provider_config_store.py  realtime_intelligence.py  realtime_slo.py  (+16 more)
code/web_mvp/backend/tests/: conftest.py  test_app.py  test_application_schema.py  test_approach_cards.py  test_asr_correct.py  test_asr_live_repository.py  test_asr_semantic_quality.py  test_asr_session_hotwords.py  test_asr_stream.py  test_audio_assets.py  test_auto_suggestions.py  test_canonical_transcript.py  test_data_governance.py  test_data_governance_api.py  test_degradation_controller.py  test_demo_evaluation.py  test_desktop_parent_watchdog.py  test_desktop_provider_config.py  test_diarization.py  (+63 more)
(+808 files in other folders)
