[package]
name = "meeting-copilot-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "meeting_copilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
getrandom = "0.3"
hex = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
url = "2"
